kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identitylink-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: identitylink-backend

  template:
    metadata:
      labels:
        app: identitylink-backend

    spec:
      containers:
        - name: backend

          image: identitylink-backend:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 3000
