kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: identitylink-backend
  labels:
    app: identitylink-backend

spec:
  selector:
    app: identitylink-backend

  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000

  type: NodePort
