kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  labels:
    app: postgres

spec:
  selector:
    app: postgres

  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432

  type: ClusterIP
